syntax = "proto3";

package pb;

option go_package = "github.com/DebdipWritesCode/Munshiji/backend/pb";

message DeleteParameterRequest {
  int32 parameter_id = 1;
}

message DeleteParameterResponse {
  bool success = 1;
}